damos inicio a la pagina de peliculas

--- a/src/app/component/peliculas/peliculas.component.html
+++ b/src/app/component/peliculas/peliculas.component.html
@@ -1,4 +1,4 @@
-
+<div class="fondo">
 <h1>Consumo Api Rest</h1>
 <h1 style="color: red;">ESTA SERIA LA INFORMACION DE LAS PELICULAS</h1>
 
@@ -14,4 +14,5 @@
       <h6 style="color: cyan;">{{Pelicula.release_date}}</h6>
 
 
+</div>
 </div>
