--- a/src/app/component/peliculas/peliculas.component.css
+++ b/src/app/component/peliculas/peliculas.component.css
@@ -1,4 +1,11 @@
 p{
   text-align: center;
-  color: black;
+  color: white;
+}
+
+.fondo{
+  background-image: url("https://cdn.pixabay.com/photo/2016/01/27/15/25/space-1164579_1280.png") ;
+  height: 100%;
+  width: 100%;
+  background-position: center;
 }
