--- a/src/app/component/peliculas/peliculas.component.css
+++ b/src/app/component/peliculas/peliculas.component.css
@@ -9,3 +9,35 @@ p{
   width: 100%;
   background-position: center;
 }
+
+.titulo{
+  text-align: center;
+  color: #ffff00;
+
+}
+
+.titulos{
+  margin-left: 30px;
+  color: #ffff00;
+
+}
+
+.episodios{
+  color: #ffff;
+  margin-left: 50px;
+
+}
+
+.grupo{
+  border: 5px solid white;
+}
+.contenido1{
+  margin: 10px;
+  display: flex;
+}
+
+
+.contenido2{
+  margin: 10px;
+  display: flex;
+}
