mas paginas de personas

--- a/src/app/personajes/pagina5/pagina5.component.html
+++ b/src/app/personajes/pagina5/pagina5.component.html
@@ -1,9 +1,10 @@
+
 <div class="fondo">
   <div class="container">
   <h1 style="color: yellow;">Personajes Star Wars</h1>
-  <button routerLink="/personas">ATRAS</button>
-  <button routerLink="/pagina3">SIGUIENTE</button>
-  <div *ngFor = "let Personas of ListaDePersonas2">
+  <button routerLink="/pagina4">ATRAS</button>
+  <button routerLink="/pagina6">SIGUIENTE</button>
+  <div *ngFor = "let Personas of ListaDePersonas5">
         <div class="grupo">
         <div class="contenido1">
         <h3 style="color: yellow;">Nombre : </h3>
