--- a/src/app/personajes/pagina7/pagina7.component.html
+++ b/src/app/personajes/pagina7/pagina7.component.html
@@ -1,9 +1,9 @@
 <div class="fondo">
   <div class="container">
   <h1 style="color: yellow;">Personajes Star Wars</h1>
-  <button routerLink="/personas">ATRAS</button>
-  <button routerLink="/pagina3">SIGUIENTE</button>
-  <div *ngFor = "let Personas of ListaDePersonas2">
+  <button routerLink="/pagina5">ATRAS</button>
+  <button routerLink="/pagina8">SIGUIENTE</button>
+  <div *ngFor = "let Personas of ListaDePersonas7">
         <div class="grupo">
         <div class="contenido1">
         <h3 style="color: yellow;">Nombre : </h3>
@@ -46,4 +46,5 @@
   </div>
   <button routerLink="/personas">ATRAS</button>
   </div>
+
 
