agregamos botones de atras y siguiente en la pagina de personas

--- a/src/app/component/personas/personas.component.html
+++ b/src/app/component/personas/personas.component.html
@@ -2,8 +2,10 @@
 <div class="container">
 <h1 style="color: yellow;">Personajes Star Wars</h1>
 
-    <button routerLink="/pagina2">SIGUIENTE</button>
-
+<div >
+    <button class="boton" routerLink="/pagina2">SIGUIENTE</button>
+</div>
+<br>
     <div *ngFor = "let Personas of ListaDePersonas">
       <div class="grupo">
       <div class="contenido1">
