--- a/src/app/personajes/pagina9/pagina9.component.html
+++ b/src/app/personajes/pagina9/pagina9.component.html
@@ -1,14 +1,9 @@
 <div class="fondo">
   <div class="container">
   <h1 style="color: yellow;">Personajes Star Wars</h1>
-
-  <div >
-   <button class="boton" routerLink="/personas">ATRAS</button>
-   <button class="boton" routerLink="/pagina3">SIGUIENTE</button>
-  </div>
-
-  <br>
-  <div *ngFor = "let Personas of ListaDePersonas2">
+  <button routerLink="/pagina7">ATRAS</button>
+  <button routerLink="/personas">INICIO</button>
+  <div *ngFor = "let Personas of ListaDePersonas9">
         <div class="grupo">
         <div class="contenido1">
         <h3 style="color: yellow;">Nombre : </h3>
@@ -51,4 +46,6 @@
   </div>
   <button routerLink="/personas">ATRAS</button>
   </div>
+
+
 
