--- a/src/app/component/personas/personas.component.css
+++ b/src/app/component/personas/personas.component.css
@@ -4,10 +4,10 @@
     width: 100%;
     background-position: center;
   }
-  
+
   .grupo{
     border: 5px solid white;
-}  
+}
   .contenido1{
     margin: 10px;
     display: flex;
@@ -46,3 +46,16 @@
     margin: 10px;
     display: flex;
 }
+
+.boton{
+  color: black;
+  padding: 5px;
+  border-radius: 10px;
+}
+
+.boton:hover{
+  color: rgb(151, 151, 0);
+
+}
+
+
