--- a/src/app/personajes/pagina3/pagina3.component.html
+++ b/src/app/personajes/pagina3/pagina3.component.html
@@ -2,8 +2,12 @@
 <div class="fondo">
   <div class="container">
   <h1 style="color: yellow;">Personajes Star Wars</h1>
-  <button routerLink="/pagina2">ATRAS</button>
-  <button routerLink="/pagina4">SIGUIENTE</button>
+  <div >
+    <button class="boton" routerLink="/pagina2">ATRAS</button>
+    <button class="boton" routerLink="/pagina4">SIGUIENTE</button>
+   </div>
+
+   <br>
   <div *ngFor = "let Personas of ListaDePersonas3">
         <div class="grupo">
         <div class="contenido1">
