--- a/src/app/personajes/pagina2/pagina2.component.html
+++ b/src/app/personajes/pagina2/pagina2.component.html
@@ -2,11 +2,13 @@
   <div class="container">
   <h1 style="color: yellow;">Personajes Star Wars</h1>
 
-  <div >
-   <button class="boton" routerLink="/personas">ATRAS</button>
+  <div class="pos1">
+      <button class="boton" routerLink="/personas">ATRÁS</button>
+  </div>
+  <div class="pos2">
    <button class="boton" routerLink="/pagina3">SIGUIENTE</button>
   </div>
-
+  <br>
   <br>
   <div *ngFor = "let Personas of ListaDePersonas2">
         <div class="grupo">
@@ -48,7 +50,14 @@
         </div>
   </div><br>
   </div>
+  <div class="pos1">
+      <button class="boton" routerLink="/personas">ATRÁS</button>
   </div>
-  <button routerLink="/personas">ATRAS</button>
+  <div class="pos2">
+   <button class="boton" routerLink="/pagina3">SIGUIENTE</button>
   </div>
+  <br><br>
+  </div>
+  </div>
+  
 
