--- a/src/app/personajes/pagina7/pagina7.component.html
+++ b/src/app/personajes/pagina7/pagina7.component.html
@@ -1,8 +1,14 @@
 <div class="fondo">
   <div class="container">
   <h1 style="color: yellow;">Personajes Star Wars</h1>
-  <button routerLink="/pagina5">ATRAS</button>
-  <button routerLink="/pagina8">SIGUIENTE</button>
+  <div class="pos1">
+      <button class="boton" routerLink="/pagina6">ATRÁS</button>
+  </div>
+  <div class="pos2">
+   <button class="boton" routerLink="/pagina8">SIGUIENTE</button>
+  </div>
+  <br>
+   <br>
   <div *ngFor = "let Personas of ListaDePersonas7">
         <div class="grupo">
         <div class="contenido1">
@@ -43,8 +49,14 @@
         </div>
   </div><br>
   </div>
+  <div class="pos1">
+      <button class="boton" routerLink="/pagina6">ATRÁS</button>
   </div>
-  <button routerLink="/personas">ATRAS</button>
+  <div class="pos2">
+   <button class="boton" routerLink="/pagina8">SIGUIENTE</button>
+  </div>
+  <br><br>
+  </div>
   </div>
 
 
